--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -10,14 +10,14 @@
 .person_entry
 {
     background-color: #FFFFFF;
-    border: 1px solid #DBDBDB !important;
-    border-radius: 0px !important;
-    -moz-border-radius: 0px !important;
-    -webkit-border-radius: 0px !important;
+    border: 1px solid #DBDBDB;
+    border-radius: 0px;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
     padding: 10px 10px 10px 10px;
-    box-shadow: 5px 5px 2px 2px #DBDBDB !important;
-    -moz-box-shadow: 5px 5px 2px 2px #DBDBDB !important;
-    -webkit-box-shadow: 5px 5px 2px 2px #DBDBDB !important;
+    box-shadow: 5px 5px 2px 2px #DBDBDB;
+    -moz-box-shadow: 5px 5px 2px 2px #DBDBDB;
+    -webkit-box-shadow: 5px 5px 2px 2px #DBDBDB;
 }
 .lightbox {
     position:fixed;
@@ -26,4 +26,19 @@
     width:100%;
     height:100%;
     background:rgba(0, 0, 0, .8);
+}
+.person_entry img
+{
+    width: 35%;
+    float: left;
+    text-align: center;
+    margin-right:14px;
+    background: #FFFFFF;
+    border: 1px solid #DBDBDB;
+    padding: 2px; border-radius: 200px;
+    -moz-border-radius: 200px !important;
+    -webkit-border-radius: 200px !important;
+    box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    -webkit-box-sizing: border-box !important;
 }
